no-gutters diffuser done

--- a/dev/test.html
+++ b/dev/test.html
@@ -26,10 +26,22 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../stylesheets/magic-monkey.min.css" type="text/css">
 
+  <style>
+    .cell-2, .cell-2-no-gutters, .cell-rest {
+      background: orange;
+    }
+
+  </style>
 </head>
+
 <body>
 
-<div class="grid grid-reverse"></div>
+<div class="grid">
+  <div class="cell-2">cell-2</div>
+  <div class="cell-2">cell-2</div>
+  <div class="cell-2">cell-2</div>
+  <div class="cell-rest">cell rest</div>
+</div>
 
 
 </body>
