--- a/dev/test.html
+++ b/dev/test.html
@@ -27,20 +27,17 @@
   <link rel="stylesheet" href="../stylesheets/magic-monkey.min.css" type="text/css">
 
   <style>
-    .cell-2, .cell-2-no-gutters, .cell-rest {
-      background: orange;
-    }
 
   </style>
 </head>
 
 <body>
 
-<div class="grid">
-  <div class="cell-2">cell-2</div>
-  <div class="cell-2">cell-2</div>
-  <div class="cell-2">cell-2</div>
-  <div class="cell-rest">cell rest</div>
+<div class="row">
+  <div class="cell-2" style="background: violet">1</div>
+  <div class="cell-6" style="background: orange">2</div>
+  <div class="cell-4" style="background: orange">3</div>
+  <div class="cell-rest" style="background: orange">4</div>
 </div>
 
 
