position, margin, padding added

--- a/dev/test.html
+++ b/dev/test.html
@@ -33,12 +33,15 @@
 
 <body>
 
-<div class="row">
-  <div class="cell-2" style="background: violet">1</div>
-  <div class="cell-6" style="background: orange">2</div>
-  <div class="cell-4" style="background: orange">3</div>
-  <div class="cell-rest" style="background: orange">4</div>
+<div style="background: violet" class="overlay padding">
+  <span class="">coucou</span>
 </div>
+<!--
+<div class="row margin-50-xl">
+  <div class="cell-2 padding-xs-only" style="background: violet">2</div>
+  <div class="cell-10" style="background: orange">10</div>
+  <div class="cell-rest-no-gutters" style="background: orange">rest</div>
+</div>-->
 
 
 </body>
